Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110623

Constrained menus activate items when cursor is not on them

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.5.1, 6.6.0
    • 5.15, 6.2, 6.3, 6.4, 6.5
    • GUI: Menus, QPA: Wayland
    • None
    • Linux/Wayland
    • 2eeefbb70 (dev), 390af54e0 (6.5)

      I suspect this is a result of fixing QTBUG-87303. Now when menus are being re-positioned by the compositor, Qt is not aware of this and when moving cursor inside the rect of parent window where the menu would be if were not re-positioned, menu items show the hover effect. Clicking within this rect activates the (as Qt thinks) hovered item. I guess Qt should handle xdg_popup::configure event and update menu geometry.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            liaqi Liang Qi
            ilya-fedin Ilya Fedin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes