client: Add support for xdg_popup_configure

This amends 59a5fe99e1569421b920d99c5b20cdafcdcf43a9.

Since set_constraint_adjustment() was supported, popup should reposition
itself from configure.

Need to find a way to test clientSideMargins() and etc in the future.

Fixes: QTBUG-110623
Task-number: QTBUG-87303
Done-with: Ilya Fedin <fedin-ilja2010@ya.ru>
Change-Id: I734acfcde3ba5a35b6f4222358bc93e49fa43f7c
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: David Edmundson <davidedmundson@kde.org>
(cherry picked from commit 2eeefbb706d8fce8d70d454c5e9ceda3ecae2479)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>